--- a/_includes/jumbotrons/cinemadrape-windows.html
+++ b/_includes/jumbotrons/cinemadrape-windows.html
@@ -7,7 +7,7 @@
                     <a href="{{ site.url }}/cinemadrape/windows/" class="aur-appname">CinemaDrape</a>
                     Minimize distractions and focus on your task by blacking out other screen areas.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.url }}/cinemadrape/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/cinemadrape/windows/download/" role="button">Run or Install for Free</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="{{ site.url }}/cinemadrape/windows/">
