--- a/_includes/jumbotrons/colortypist-windows.html
+++ b/_includes/jumbotrons/colortypist-windows.html
@@ -7,7 +7,7 @@
                     <a href="{{ site.url }}/colortypist/windows/" class="aur-appname">Colortypist</a>
                     Type in a color name or code, and see it fill your screen in real-time, while you type.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.url }}/colortypist/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/colortypist/windows/download/" role="button">Run or Install for Free</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="{{ site.url }}/colortypist/windows/">
