--- a/_includes/jumbotrons/htmtied-windows.html
+++ b/_includes/jumbotrons/htmtied-windows.html
@@ -7,7 +7,7 @@
                     <a href="{{ site.url }}/htmtied/windows/" class="aur-appname">HTMtied</a>
                     Save your Internet bookmarks as tiny portable HTML link files, and use them anywhere.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.url }}/htmtied/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/htmtied/windows/download/" role="button">Run for Free</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="{{ site.url }}/htmtied/windows/">
