--- a/_includes/jumbotrons/injuredpixels-windows.html
+++ b/_includes/jumbotrons/injuredpixels-windows.html
@@ -4,14 +4,11 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.url }}/injuredpixels/windows/" class="aur-appname">InjuredPixels<span class="hidden-xs-down"> for Windows</span></a>
+                    <a href="{{ site.url }}/injuredpixels/windows/" class="aur-appname">InjuredPixels for Windows</a>
                     Check your PC, laptop or tablet screen for dead pixels, scratches or defects.
                 </h1>
                 <p>
-                    <a class="btn btn-primary" href="{{ site.url }}/injuredpixels/windows/download/" role="button">
-                        <span class="hidden-sm-up">Get it Free for Windows</span>
-                        <span class="hidden-xs-down">Run or Install for Free</span>
-                    </a>
+                    <a class="btn btn-primary" href="{{ site.url }}/injuredpixels/windows/download/" role="button">Run or Install for Free</a>
                 </p>
                 <p class="aur-extra">Also available for <a class="aur-link" href="{{ site.url }}/injuredpixels/android/">Android</a></p>
             </div>
