--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -7,7 +7,7 @@
                     <a href="{{ site.url }}/colorveil/windows/" class="aur-appname">ColorVeil</a>
                     Color filters over your screen. Reduce eye strain, help with Dyslexia and Visual Stress.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.url }}/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/colorveil/windows/download/" role="button">Run or Install for Free</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="{{ site.url }}/colorveil/windows/">
