--- a/_includes/jumbotrons/pixelhealer-windows.html
+++ b/_includes/jumbotrons/pixelhealer-windows.html
@@ -7,7 +7,7 @@
                     <a href="{{ site.url }}/pixelhealer/windows/" class="aur-appname">PixelHealer</a>
                     Try to fix dead, stuck or hot pixels by yourself, before running back to the store!
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.url }}/pixelhealer/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/pixelhealer/windows/download/" role="button">Run or Install for Free</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="{{ site.url }}/pixelhealer/windows/">
