--- a/_includes/jumbotrons/thumbico-windows.html
+++ b/_includes/jumbotrons/thumbico-windows.html
@@ -7,7 +7,7 @@
                     <a href="{{ site.url }}/thumbico/windows/" class="aur-appname">Thumbico</a>
                     View the large thumbnail or icon of any file, document, or program on your PC.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.url }}/thumbico/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/thumbico/windows/download/" role="button">Run or Install for Free</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="{{ site.url }}/thumbico/windows/">
