--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="monetization" content="$ilp.uphold.com/rArwUNMrHX9D">
 
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
